# MCP_Linux_Administration_SSH-OpenWebUI_Tool

./: .dockerignore  .gitignore  Dockerfile  README.md  config.yaml.example  docker-compose.yml  pyproject.toml  ssh_linux_control.py
src/ssh_control_mcp/: __init__.py  http_wrapper.py  server.py
